Fixed letter spacing in titles.

--- a/css/screen.css
+++ b/css/screen.css
@@ -96,7 +96,7 @@ border: solid 1px #fff;
 h1 {
 color:#0383c9;
 font-size:2.0em;
-letter-spacing:-3px;
+letter-spacing:-1px;
 margin:0 0 30px 0px;
 padding:50px 0 50px 0;;
 line-height: 1.1em;
